--- a/keyConcepts.html
+++ b/keyConcepts.html
@@ -5,12 +5,12 @@
         <h1>Types of Cryptography</h1>
     </head>
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li> <a href="about.html">About</a></li>
-            <li> <a href="resources.html"> Resources</a></li>
-        </ul>
-    </nav>
+        
+        <a href="index.html">Home</a>
+         <a href="about.html">About</a>
+         <a href="resources.html"> Resources</a>
+   
+</nav>
     <body>
         <article>
             <h2><strong>Plaintext</strong> </h2>
@@ -22,6 +22,8 @@
             <h2><strong>Decrypt</strong></h2>
             <p>The process to converting chipertext to plaintext.</p>
         </article>
-
+        <footer>
+            <p> Written by CSUS Student Francia Garcia</p>
+        </footer>   
     </body>
 </html>
