--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -11,22 +11,22 @@
 		<h1>Fancify my Text</h1>
 
 		<!-- Your UI controls go here -->
+		
+
 		<textarea id="UserInput" rows="4" cols="30">Text</textarea>
 
-		<fieldset>
-            <title>Fancify</title>
-			
-		
-            <button  type="button" onclick="handleBiggerButtonClick()">Bigger</button><br><br>
+    <div class="container">
+        <legend>Fancify</legend>
+        <button type="button" onclick="handleBiggerButtonClick()">Bigger</button><br><br>
 
-            <label>Fancy Level:</label><br>
-            <input type="radio" id="fancyShmancy" value="fancyShmancy">
-            <label for="fancyShmancy">FancyShmancy</label><br>
-            <input type="radio" id="boringBetty" value="boringBetty" oncange=" radioHandleOnChange()">
-            <label for="boringBetty" oncange=" radioHandleOnChange()">BoringBetty</label><br><br>
-        
-        </fieldset>
-		<input type="submit" value="Submit">
+        <label>Fancy Level:</label><br>
+        <input type="radio" id="fancyShmancy" name = "fancytext" value="fancyShmancy" onchange="radioHandleOnChange()">
+        <label for="fancyShmancy">FancyShmancy</label><br>
+        <input type="radio" id="boringBetty" name="borringtext" value="boringBetty" onchange="radioHandleOnChange()">
+        <label for="boringBetty">BoringBetty</label><br><br>
+	</div>
+
+		<button type="submit" onclick="handleMooButtonClick()">Moo</button>
 		
 		
 	</body>
