--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -20,9 +20,9 @@
         <button type="button" onclick="handleBiggerButtonClick()">Bigger</button><br><br>
 
         <label>Fancy Level:</label><br>
-        <input type="radio" id="fancyShmancy" name = "fancytext" value="fancyShmancy" onchange="radioHandleOnChange()">
+        <input type="radio" id="fancyShmancy" name = "myRadios" value="javascript" onchange="radioHandleOnChange()">
         <label for="fancyShmancy">FancyShmancy</label><br>
-        <input type="radio" id="boringBetty" name="borringtext" value="boringBetty" onchange="radioHandleOnChange()">
+        <input type="radio" id="boringBetty" name="myRadios" value="javascript" onchange="radioHandleOnChange()">
         <label for="boringBetty">BoringBetty</label><br><br>
 	</div>
 
