--- a/starter/encrypt-it.html
+++ b/starter/encrypt-it.html
@@ -26,7 +26,7 @@
           </select>
         </p>
 
-        <button id="encrypt-it" type="submit" onclick="handleEncryptClick()">Encrypt It!</button>
+        <button id="encrypt-it" type="submit" >Encrypt It!</button>
         <button id="reset">Reset</button>
       </fieldset>
 
